# loomle

./: .gitattributes  .gitignore  AGENTS.md  BRIDGE_NEXT_DESIGN.md  LICENSE  LoomleBridge.uplugin  README.md  package-lock.json  package.json
bridge/: LoomleBridge.uplugin
client/: Cargo.toml  README.md  doctor.ps1  doctor.sh  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  update.ps1  update.sh
client/scripts/: build-sal.mjs  build.mjs  clean.mjs  run-tests.mjs
client/src/: install.rs  lib.rs  main.rs  main.ts  mcp-server.ts  runtime-discovery.ts  runtime-rpc.ts  runtime.ts  schema_inspect.rs  skill.rs  status.ts  tools.ts
client/tests/: bundle.test.ts  mcp-server.test.ts  runtime-discovery.test.ts  runtime-rpc.test.ts  runtime.test.ts  status.test.ts  tools.test.ts
design/: ARCHITECTURE.md  LOOME_BLUEPRINT_ADAPTER.md  LOOME_BRIDGE.md  LOOME_GRAPH.md  LOOMLE_BLUEPRINT_ADAPTER.md  LOOMLE_BRIDGE.md  LOOMLE_GRAPH.md  README.md  RPC_INTERFACE.md
docs/: ARCHITECTURE.md  BLUEPRINT_INTERFACE_DESIGN.md  BLUEPRINT_USER_DEFINED_STRUCT_DESIGN.md  CLIENT_STATUS_AND_UPDATES.md  COMMUNITY_OUTREACH.md  DOCUMENTATION_AUDIT.md  FAB_DISTRIBUTION_DESIGN.md  GLOBAL_INSTALL_STATE.md  GRAPH_OPS_DESIGN.md  GRAPH_OPS_PROTOCOL_DRAFT.md  INSTALL_ENTRYPOINT_DESIGN.md  INSTALL_PAGE_CONTENT.md  LOOMLE_040_CLI_SURFACE.md  LOOMLE_040_CPP_MCP_SDK_MINIMAL_DESIGN.md  LOOMLE_040_INSTALL_UPGRADE_DESIGN.md  LOOMLE_040_PRODUCT_DIRECTION.md  LOOMLE_040_PROJECT_LOCAL_UPDATE_MODEL.md  LOOMLE_040_PROJECT_WORKDIR_MODEL.md  LOOMLE_040_RUNTIME_CONNECTIVITY.md  LOOMLE_040_STRUCTURE_REFACTOR.md  LOOMLE_060_PYTHON_MCP_SCHEMA_DESIGN.md  LOOMLE_060_RELEASE_DISTRIBUTION_PLAN.md  LOOMLE_070_REPOSITORY_AND_DISTRIBUTION.md  LOOMLE_GLOBAL_INSTALL_MODEL.md  LOOMLE_LITE_INSTALL_UPDATE_GUIDE.md  LOOMLE_LITE_KERNEL_MODEL.md  LOOMLE_LITE_PRODUCT_PLAN.md  LOOMLE_PERMISSION_MODEL.md  LOOMLE_STUDIO_ROLES_DRAFT.md  MCP_PROTOCOL.md  MUTATION_DRY_RUN_CONTRACT.md  PCG_LEARNING_RESOURCES_UE57.md  PCG_NODE_CATALOG_VS_OPS.md  PCG_OFFICIAL_CATEGORIES_AND_SEMANTIC_TAXONOMY.md  PCG_SEMANTIC_OPS_FINAL_DRAFT.md  PROJECT_BINDING_AND_RUNTIME_LIVENESS.md  README.md  REPO_STRUCTURE.md  RPC_INTERFACE.md  TESTING_AND_RELEASE_GATES.md  (+12 more)
engine/: README.md
interfaces/: GUIDE.md  README.md  asset.md  blueprint.md  graph.md  package.json  state_tree.md  tsconfig.json  widget.md
mcp/: README.md
mcp/client/: Cargo.toml  README.md
mcp/client/src/: install.rs  lib.rs  main.rs  skill.rs
mcp/python/: loomle_mcp_server.py  pyproject.toml
mcp/python/loomle_mcp/: __init__.py  bridge_rpc.py  dev.py  manifest.py  project_registry.py  server.py  setup_status.py  transforms.py
mcp/python/tests/: test_bridge_rpc.py  test_manifest.py  test_project_tools.py  test_sdk_server.py  test_transforms.py
mcp/server/: Cargo.toml  README.md
mcp/server/src/: lib.rs  main.rs  mcp.rs  schema.rs  sdk.rs  transport.rs
mcp_server/: Cargo.toml  README.md
packaging/: BOOTSTRAP_CONTRACT.md  README.md
runtime/: blueprint_cpp_python_gap_report.json  blueprint_native_api_schema.json  blueprint_python_api_inventory.json
site/: CNAME  (+10 more)
(+886 files in other folders)
