[package]
name = "loomle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loomle"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["client", "transport-child-process"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "process", "rt-multi-thread"] }
