[package]
name = "loomle"
version = "0.3.41"
edition = "2021"

[[bin]]
name = "loomle"
path = "src/main.rs"

[dependencies]
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmcp = { version = "1.2.0", features = ["client", "transport-child-process"] }
serde = "1"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
