[project]
name = "loomle-mcp-python"
version = "0.6.11"
description = "Python MCP server entrypoint for LOOMLE."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "mcp>=1.27.1,<2",
]

[project.scripts]
loomle-mcp-python = "loomle_mcp.server:main"

[tool.loomle]
manifest = "../manifest/manifest.json"
