[package]
name = "loomle_mcp_server"
version = "0.3.32"
edition = "2021"

[dependencies]
rmcp = { version = "1.2.0", features = ["client", "server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1"
